变量的解构赋值使得语句更加简单

--- a/002-变量的解构赋值.md
+++ b/002-变量的解构赋值.md
@@ -13,30 +13,309 @@
 ## :sunny:数组的解构赋值
 <a href="#title">:whale2:回到目录</a><br>
 #### :mag_right:基本用法
+按照一定模式从数组和对象中提取值,然后对变量进行赋值--**解构**
+```JavaScript
+let [a,b,c]=[1,2,3];
+```
+本质上就做"模式匹配",只要两边的模式相同,左边的变量就会被赋予对应的值<br>
+例子:
+```JavaScript
+let [foo,[[bar],baz]]=[1,[[2],3]];
+foo 1
+bar 2
+baz 3
+```
+```javascript
+let [, ,third]=["foo","bar","baz"];
+third  //"baz"
+```
+```javascript
+let [x,,y]=[1,2,3];
+x  //1
+y  //2
+```
+```javascript
+let [head,...tail]=[1,2,3,4];
+head  //1
+tail  //[2,3,4]
+```
+```javascript
+let [x,y,...z]=['a'];
+x  //a
+y  //undefiend
+z  //[]
+```
+如果解构不成功,变量的值就为undefined
+```JavaScript
+let [foo]=[];
+let [bar,foo]=[1];
+//这两种情况都不成功
+```
+等号左边的模式只匹配一部分的等号右边的数组,叫做不完全解构(依然成功)
+```JavaScript
+let [x,y]=[1,2,3];
+x //1
+y //2
+
+let [a,[b],d]=[1,[2,3],4];
+a  //1
+b  //2
+d  //4
+```
+如果等号的右边不是可遍历的结构,就会报错.<br>
+对于Set结构,也可以使用数组的解构赋值
+```JavaScript
+let [x,y,z]=new Set(['a','b','c']);
+x  //"a"
+```
+只要某种数据结构具有Iterator接口,都可以采用**数组形式**的解构赋值
+```JavaScript
+function* fibs(){
+    let a=0;
+    let b=0;
+    while(true){
+        yield a;
+        [a,b]=[b,a+b];
+    }
+}
+let [first,second,third,fourth,fifth,sixth]=fibs();
+console.log(first);   //0
+console.log(second);  //1
+console.log(third);   //1
+console.log(fourth);  //2
+```
+解构赋值会依次从这个接口中获取值
 #### :mag_right:默认值
+解构赋值允许默认值,但是如果一个数组成员不严格等于undefined,默认值不会生效
+```JavaScript
+let [x=1] =[undefined];
+x  //1
+
+let[x=1]=null;
+x  //null
+```
+如果默认值是一个表达式,那么这个表达式是惰性求值的,即只有在用到的时才会去求值
+```JavaScript
+function f(){
+    console.log('aaa');
+}
+
+let [x=f()]=[1]
+```
+因为x能取到值,所以函数f根本不会执行<br>
+默认值可以引用解构的其他变量,但是变量必须已经声明
+```JavaScript
+let [x=1,y=x]=[];  //x=1;y=1
+let [x=y,y=1]=[];  //报错
+```
 <p id="p2"></p>
 
 ## :sunny:对象的解构赋值
 <a href="#title">:whale2:回到目录</a><br>
+**对象的结构赋值的原形:**
+```JavaScript
+let {foo:foo,bar: bar}={foo:"aaa",bar:"bbb"};
+//简写为
+let {foo,bar}={foo:"aaa",bar:"bbb"};
+```
+**对象的解构与数组有一个重要的不同**: 数组的元素是按位序排列的,变量的取值是由他的位置决定的;而对象的属性没有序列,变量必须与属性同名才可以取到正确的值
+```JavaScript
+let {foo:baz}={foo:"aaa",bar:"bbb"};
+baz  //"aaa"
+foo  //error
+```
+上面的代码中,foo是匹配的模式,baz才是变量,真正被赋值的是baz,而不是模式foo.<br>
+与数组一样,嵌套结构的对象也可以用于解构
+```JavaScript
+let obj={
+    p:[
+        'hello',
+        {y: 'world'}
+    ]
+};
+
+let {p:[x,{y}]}=obj;
+x  //"hello"
+y  //"world"
+```
+**注意**: 这时p是模式,不是变量,因此不会被赋值,如果p也要作为变量赋值,改进如下:
+```JavaScript
+let obj={
+    p:[
+        'hello',
+        {y: 'world'}
+    ]
+};
+
+let {p,p:[x,{y}]}=obj;
+x  //"hello"
+y  //"world"
+p  //["hello",{y:"world"}]
+```
+如果解构模式是嵌套的对象,而且子对象所在的父属性不存在,那么将会报错
+```JavaScript
+//报错  因为此时foo等于undefined
+let {foo:{bar}}={baz:'baz'}
+```
+如果要将一个已经声明的变量用于解构赋值,注意:
+```JavaScript
+//错误的写法
+let x;
+{x}={x:1}
+//错误原因:{x}被理解成为一个代码块,从而发生语法错误
+//正确的写法
+let x;
+{{x}={x:1}};
+```
+**补充**:<br>
++ 解构赋值允许等号左边的模式之中可以不放置任何变量名:
+```JavaScript
+({}=[true,false]);
+({}='abc');
+({}=[]);
+//以上都合理
+```
++ 由于数组本质是特殊的对象,因此可以对数组进行对象属性的解构
+```JavaScript
+let arr =[1,2,3];
+let {0:first,[arr.length-1]: last}=arr;
+first //1
+last  //3
+```
+这种写法叫做"属性名表达式",第九章会介绍
 <p id="p3"></p>
 
 ## :sunny:字符串的解构赋值
 <a href="#title">:whale2:回到目录</a><br>
+字符串当做类似数组,也可以解构赋值
+```JavaScript
+const [a,b,c,d,e]='hello';
+a //"h"
+c  //"l"
+```
 <p id="p4"></p>
 
 ## :sunny:数值和布尔值的解构赋值
 <a href="#title">:whale2:回到目录</a><br>
+**解构赋值的规则**: 只要等号右边的值不是对象或数组,就先将其转换为对象,*由于undefined和null无法装换为对象,所以对他们进行解构赋值会报错*
+```JavaScript
+let {toString: s}=123;
+s===Number.prototype.toString //true
+
+let {toString: s}=true;
+s===Boolean.prototype.toString //true
+```
 <p id="p5"></p>
 
 ## :sunny:函数参数的解构赋值
 <a href="#title">:whale2:回到目录</a><br>
+函数的参数也可以使用结构赋值
+```JavaScript
+[[1,2],[3,4]].map(([a,b])=>a+b);
+//[3,7]
+```
+函数参数的解构也可以使用默认值
+```JavaScript
+function move({x=0,y=0}={}{
+    return [x,y];
+})
+```
 <p id="p6"></p>
 
 ## :sunny:圆括号问题
 <a href="#title">:whale2:回到目录</a><br>
 #### :mag_right:不能使用圆括号的情况
++ 声明变量语句
+```JavaScript
+let [(a)]=[1];
+
+let {x:(c)}={};
+let ({x:c})={};
+let {(x):c}={};
+
+let {o:({p:p})}={o:{p:2}}
+```
++ 函数参数
+```JavaScript
+function f([(z)]){}  //报错
+```
++ 赋值语句的模式
+```JavaScript
+({p:a})={p:42};
+([a])=[5];
+```
 #### :mag_right:可以使用圆括号的情况
+只有一种情况:**赋值语句的非模式部分可以使用圆括号**
+```JavaScript
+[(b)]=3;  //赋值语句
+({p:(d)}:{});
+```
 <p id="p7"></p>
 
 ## :sunny:用途
 <a href="#title">:whale2:回到目录</a><br>
++ 变换变量的值
+```JavaScript
+let x=1;
+let y=2;
+[x,y]=[y,x];
+```
++ 从函数放回多个值:将他们放在数组或对象里返回,通过解构赋值接收
+```JavaScript
+//返回一个数组
+function example(){
+    return [1,2,3];
+}
+let [a,b,c]=example();
+//返回一个对象
+function example(){
+    return {
+        foo:1,
+        bar:2
+    };
+}
+let {foo,bar}=example();
+```
++ 函数参数的定义:可以方便地将参数与变量名对应起来
+```JavaScript
+function f({x,y,z}){..}
+f({z:3,y:2,x:1});
+```
++ 提取JSON数据
+```JavaScript
+let jsonData={
+  id:2,
+  status:"OK",
+  data: [855,5554]
+};
+let {id,status,data: number}=jsonData;
+
+console.log(id,status,number);   //42,"OK",[855, 5554]
+```
++ 函数参数的默认值
+```JavaScript
+jQuery.ajax=function (url,{
+  async = true,
+  beforeSend = function(){},
+  cache=true,
+  complete=function(){},
+  crossDomain=false,
+  global=true,
+}){
+
+}
+```
++ 遍历Map结构:任何部署了Iterator接口的对象都可以用for...of循环遍历
+```JavaScript
+var map=new Map();
+map.set('frist','hello');
+map.set('second','world');
+
+for(let [key,value]of map){
+    console.log(key+ "is" + value);
+}
+```
++ 输入模块的指定方法:加载模块时,往往需要指定输入的方法.解构赋值使得语句非常清晰
+```JavaScript
+const {SourceMapConsumer,SourceNode} = require("source-map");
+```
