--- a/003-字符串的拓展.md
+++ b/003-字符串的拓展.md
@@ -435,7 +435,90 @@ func('Jack') // "Hello Jack!"
 
 ## :sunny:实例:模板编译
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+下面:我们来看一个通过模板生成正式模板的实例
+```JavaScript
+var template = '
+    <ul>
+        <% for(var i=0;i<data.supplies.length;i++){%>
+            <li><%=data.supplies%></li>
+        <%}%>
+    </ui>
+'
+```
+这里放置了一个常规模块,使用<%...%>放置JavaScript代码,使用<%=...%>输出JavaScript代码<br>
+下面介绍如何将其转换为JavaScript表达式字符串
+```JavaScript
+echo('<ul>');
+for(var i=0;i<data.supplies.length;i++){
+    echo('<li>');
+    echo(data.supplies[i]);
+    echo('<\li>');
+};
+echo('<\ul>')
+```
+这个转换使用正则表达式即可
+```JavaScript
+var evalExpr = /<%=(.+?)%>/g;
+var expr=/<%([\s\S]+?)%>/g
+
+template = template
+  .replace(evalExpr, ''); \n echo($1); \n echo('')
+  .replate(expr, ''); \n $1  \n  echo('');
+template='echo(''+ template'')'; 
+```
+然后将template封装在一个函数里面返回
+```JavaScript
+var script = 
+'
+    (function parse(data){
+        var output="";
+        
+        function echo(html){
+            output+=html;
+        }
+        
+        ${template}
+        
+        return output;
+    })
+';
+return output;
+```
+将上面的内容拼装成一个编译函数compile
+```JavaScript
+function complie(template){
+    var evalExpr = /<%=(.+?)%>/g;
+var expr=/<%([\s\S]+?)%>/g
+
+template = template
+  .replace(evalExpr, ''); \n echo($1); \n echo('')
+  .replate(expr, ''); \n $1  \n  echo('');
+template='echo(''+ template'')'; 
+var script = 
+'
+    (function parse(data){
+        var output="";
+        
+        function echo(html){
+            output+=html;
+        }
+        
+        ${template}
+        
+        return output;
+    })
+';
+return output;
+}
+```
+complie函数的用法如下:
+var parse=eval(complie(template));
+div.innerHTMl=parse({supplies:["broom","mop","cleaner"]});
+// <ul>
+      <li>broom</li>
+//    <li>mop</li>
+//    <li>cleaner</li>
+//  </ul>
 <p id="p12"></p>
 
 ## :sunny:模板标签
@@ -445,7 +528,29 @@ func('Jack') // "Hello Jack!"
 
 ## :sunny:String.raw()
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+String.raw方法可以作为处理模板字符串的基本方法，它会将所有变量替换，而且对斜杠进行转义，方便下一步作为字符串来使用。
+
+String.raw方法也可以作为正常的函数使用。这时，它的第一个参数，应该是一个具有raw属性的对象，且raw属性的值应该是一个数组。
+```javascript
+String.raw({ raw: 'test' }, 0, 1, 2);
+// 't0e1s2t'
+
+// 等同于
+String.raw({ raw: ['t','e','s','t'] }, 0, 1, 2);
+```
+作为函数，String.raw的代码实现基本如下。
+```javascript
+String.raw = function (strings, ...values) {
+  let output = '';
+  let index;
+  for (index = 0; index < values.length; index++) {
+    output += strings.raw[index] + values[index];
+  }
+
+  output += strings.raw[index]
+  return output;
+}
+```
 <p id="p14"></p>
 
 ## :sunny:模板字符串的限制
