--- a/004-函数的拓展.md
+++ b/004-函数的拓展.md
@@ -98,28 +98,531 @@ foo({x:1,y:2});  //1,2
 foo()  //error
 ```
 上面的代码使用了对象的解构赋值默认值,而没有使用函数参数的默认值.**只有当函数参数是一个对象时,变量x和y才会通过解构赋值而生成**,如果函数调用时参数不是对象
-,变量x和y就不会生成,从而报错,只有参数对象没有y属性时,y的默认值才会生效
+,变量x和y就不会生成,从而报错,只有参数对象没有y属性时,y的默认值才会生效.看下面这个例子:
+```JavaScript
+function fetch(url,{body='',method='GET',header={}}){
+    console.log(method);
+}
+
+fetch('https://...',{})
+//"GET"
+
+fetch('https://...')
+//error
+```
+上面的写法不可以省略第二个参数,如果结合函数参数的默认值,就可以省略第二个参数-->**双重默认值**
+```JavaScript
+function fetch(url,{method="GET"}={}){
+    console.log(method);
+}
+
+frtch('https://...')
+//"GET"
+```
+上面的代码中,函数fetch没有第二个参数时,函数参数的默认值就会生效,然后才是解构赋值的默认值生效
+
+---
+比较下面两种用法:
+```JavaScript
+//写法1
+function m1({x=0,y=0}){
+    return [x,y];
+}
+//写法2
+function m2({x,y}={x:0,y=0}){
+    reuturn [x,y];
+}
+```
+上面两种对函数的参数设定了默认值,区别在于:第一种函数参数的默认值是空的,但设置了对象的解构赋值的默认值;第二种中函数参数的默认值是一个有具体属性的函数,但是没有设置对象解构赋值的默认值
+```JavaScript
+//函数没有参数的情况下
+m1()  //[0,0]
+m2()  //[0,0]
+
+//x和y都有值的情况
+m1({x:3,y:8})  //[3,8]
+m2({x:3,y:8})   //[3,8]
+
+
+//x有值,y无值的情况
+m1({x:3})  //[3,0]
+m2({x:3})  //[3,undefined]
+
+//x和y都无值的情况下
+m1({})  //[0,0]
+m2({})  //[undefined,undefined]
+
+m1({z:3})  //[0,0]
+m2({z:3})  //[undefined,undefiend]
+```
 #### :mag_right:参数默认值的位置
+通常情况下,定义了默认值的参数应该是函数的尾参数,因为这样比较容易看出到底省略了哪些参数.**如果非尾部的参数设置默认值,实际上这个参数是无法省略的**
+```JavaScript
+//例一
+function f(x=1,y){
+    return [x,y];
+}
+
+f()  //[1,undefiend]
+f(2)  //[2,undefiend]
+f(,1)  //报错
+f(undefined,1)  //[1,1]
+
+//例二
+function f(x,y=5,z) {
+    return [x,y,z];
+}
+
+f()  //[undefined,5,undefined]
+f(1)  //[1,5,undefined]
+f(1,2)  //报错
+f(1,undefined,2)  //[1,5,2]
+```
+上面的代码中,,无法省略改参数,而不省略其后的参数,除非显示输入undefined<br>
+**如果传入undefined,将触发该参数等于默认值,null则没有这个效**
+```JavaScript
+function foo(x=5,y=6){
+    console.log(x,y);
+}
+
+foo(undefined,null);
+// 5 null
+```
 #### :mag_right:函数的length属性
+指定了默认值以后，函数的length属性，将返回没有指定默认值的参数个数。也就是说，指定了默认值后，length属性将失真。
+```javascript
+(function (a) {}).length // 1
+(function (a = 5) {}).length // 0
+(function (a, b, c = 5) {}).length // 2
+```
+上面代码中，length属性的返回值，等于函数的参数个数减去指定了默认值的参数个数。比如，上面最后一个函数，定义了 3 个参数，其中有一个参数c指定了默认值，因此length属性等于3减去1，最后得到2。
+
+这是因为length属性的含义是，**该函数预期传入的参数个数**。某个参数指定默认值以后，预期传入的参数个数就不包括这个参数了。同理，后文的 rest 参数也不会计入length属性。
+```JavaScript
+(function(...args) {}).length // 0
+```
+如果设置了默认值的参数不是尾参数，那么length属性也不再计入后面的参数了。
+```JavaScript
+(function (a = 0, b, c) {}).length // 0
+(function (a, b = 1, c) {}).length // 1
+```
+值得注意的是这个length属性是函数声明的参数的个数，并不是实际调用函数的个数，如下：
+```JavaScript
+function add(){
+  if(add.length==0){
+    alert("没有参数");
+  }
+  else if(add.length==1){
+    alert("只有一个参数");
+  }
+  else{
+    alert('有'+length+'个参数');
+  }
+}
+
+add();    //没有参数
+add(2);   //没有参数
+```
+add(2,6); //没有参数
+如上面所示，调用函数的参数不是length的值，它是函数在声明时候的参数值，如果要看调用参数的个数，需要使用参数数组，arguments.length代表调用参数个数。
 #### :mag_right:作用域
+一旦设置了参数的默认值，函数进行声明初始化时，参数会形成一个单独的作用域（context）。等到初始化结束，这个作用域就会消失。这种语法行为，在不设置参数默认值时，是不会出现的。
+```JavaScript
+var x = 1;
+
+function f(x, y = x) {
+  console.log(y);
+}
+
+f(2) // 2
+```
+上面代码中，参数y的默认值等于变量x。调用函数f时，参数形成一个单独的作用域。在这个作用域里面，默认值变量x指向第一个参数x，而不是全局变量x，所以输出是2。
+
+再看下面的例子。
+```JavaScript
+let x = 1;
+
+function f(y = x) {
+  let x = 2;
+  console.log(y);
+}
+
+f() // 1
+```
+上面代码中，函数f调用时，参数y = x形成一个单独的作用域。这个作用域里面，变量x本身没有定义，所以指向外层的全局变量x。函数调用时，函数体内部的局部变量x影响不到默认值变量x。
+
+如果此时，全局变量x不存在，就会报错。
+```JavaScript
+function f(y = x) {
+  let x = 2;
+  console.log(y);
+}
+
+f() // ReferenceError: x is not defined
+```
+下面这样写，也会报错。
+```JavaScript
+var x = 1;
+
+function foo(x = x) {
+  // ...
+}
+
+foo() // ReferenceError: x is not defined
+```
+上面代码中，参数x = x形成一个单独作用域。实际执行的是let x = x，由于暂时性死区的原因，这行代码会报错”x 未定义“。
+
+如果参数的默认值是一个函数，该函数的作用域也遵守这个规则。请看下面的例子。
+```JavaScript
+let foo = 'outer';
+
+function bar(func = () => foo) {
+  let foo = 'inner';
+  console.log(func());
+}
+
+bar(); // outer
+```
+上面代码中，函数bar的参数func的默认值是一个匿名函数，返回值为变量foo。函数参数形成的单独作用域里面，并没有定义变量foo，所以foo指向外层的全局变量foo，因此输出outer。
+
+如果写成下面这样，就会报错。
+```JavaScript
+function bar(func = () => foo) {
+  let foo = 'inner';
+  console.log(func());
+}
+
+bar() // ReferenceError: foo is not defined
+```
+上面代码中，匿名函数里面的foo指向函数外层，但是函数外层并没有声明变量foo，所以就报错了。
+
+下面是一个更复杂的例子。
+```JavaScript
+var x = 1;
+function foo(x, y = function() { x = 2; }) {
+  var x = 3;
+  y();
+  console.log(x);
+}
+
+foo() // 3
+x // 1
+```
+上面代码中，函数foo的参数形成一个单独作用域。这个作用域里面，首先声明了变量x，然后声明了变量y，y的默认值是一个匿名函数。这个匿名函数内部的变量x，指向同一个作用域的第一个参数x。函数foo内部又声明了一个内部变量x，该变量与第一个参数x由于不是同一个作用域，所以不是同一个变量，因此执行y后，内部变量x和外部全局变量x的值都没变。
+
+如果将var x = 3的var去除，函数foo的内部变量x就指向第一个参数x，与匿名函数内部的x是一致的，所以最后输出的就是2，而外层的全局变量x依然不受影响。
+```Javascript
+var x = 1;
+function foo(x, y = function() { x = 2; }) {
+  x = 3;
+  y();
+  console.log(x);
+}
+
+foo() // 2
+x // 1
+```
 #### :mag_right:应用
+利用参数默认值可以指定某一个参数不得省略,如果省略就抛出错误
+```JavaScript
+function throwIfMissing(){
+    throw new Error('Missing parameter');
+}
+
+function foo(mustBeProvided=throwIfMissing()){
+    return mustBeProvide;
+}
+
+foo()
+//Error:Missing parameter
+```
+另外,可以将参数默认值设为undefined,表明这个参数是可以省略的
+```JavaScript
+function foo(optional=undefined){...}
+```
 <p id="p2"></p>
 
 ## :sunny:rest参数
 <a href="#title">:whale2:回到目录</a><br>
+ES6 引入 rest 参数（形式为...变量名），用于获取函数的多余参数，这样就不需要使用arguments对象了。rest 参数搭配的变量是一个数组，该变量将多余的参数放入数组中。
+```javascript
+function add(...num){
+    let sum = 0;
+    if(num.length<2){
+      alert("参数个数不足");
+    }
+    else{
+      for(item in num){
+        sum = sum + num[item];
+      }
+      alert('sum = '+sum);
+    }
+}
+
+add();              //参数个数不足
+add(2);             //参数个数不足
+add(2,6);           //sum = 8
+add(2,6,2);         //sum = 10
+add(1,2,3,4);       //sum = 10
+add(1,2,3,4,5);     //sum = 15
+```
+像这样就可以很方便的解决多参数的问题，下面是一个 rest 参数代替arguments变量的例子。
+```javascript
+// arguments变量的写法
+function sortNumbers() {
+  return Array.prototype.slice.call(arguments).sort();
+}
+
+// rest参数的写法
+const sortNumbers = (...numbers) => numbers.sort();
+```
+上面代码的两种写法，比较后可以发现，rest 参数的写法更自然也更简洁。
+
+arguments对象不是数组，而是一个类似数组的对象。所以为了使用数组的方法，必须使用Array.prototype.slice.call先将其转为数组。rest 参数就不存在这个问题，它就是一个真正的数组，数组特有的方法都可以使用。下面是一个利用 rest 参数改写数组push方法的例子。
+```javascript
+function push(array, ...items) {
+  items.forEach(function(item) {
+    array.push(item);
+    console.log(item);
+  });
+}
+
+var a = [];
+push(a, 1, 2, 3)
+```
+**注意:** rest参数之后不能再有其他参数(只能是最后一个参数),否则会报错
+```JavaScript
+//报错
+function f(a,...b,c){
+  //
+}
+```
+函数的length属性不包括rest参数
+```JavaScript
+(function(a){}).length  //1
+(function(...a){}.length)  //0
+(function(a,...b){}).length  //1
+```
 <p id="p3"></p>
 
 ## :sunny:严格模式
 <a href="#title">:whale2:回到目录</a><br>
+从 ES5 开始，函数内部可以设定为严格模式。
+```javascript
+function doSomething(a, b) {
+  'use strict';
+  // code
+}
+```
+ES2016 做了一点修改，规定只要函数参数使用了默认值、解构赋值、或者扩展运算符，那么函数内部就不能显式设定为严格模式，否则会报错。
+```javascript
+// 报错
+function doSomething(a, b = a) {
+  'use strict';
+  // code
+}
+
+// 报错
+const doSomething = function ({a, b}) {
+  'use strict';
+  // code
+};
+
+// 报错
+const doSomething = (...a) => {
+  'use strict';
+  // code
+};
+
+const obj = {
+  // 报错
+  doSomething({a, b}) {
+    'use strict';
+    // code
+  }
+};
+```
+*这样规定的原因是，函数内部的严格模式，同时适用于函数体和函数参数。但是，函数执行的时候，先执行函数参数，然后再执行函数体。这样就有一个不合理的地方，只有从函数体之中，才能知道参数是否应该以严格模式执行，但是参数却应该先于函数体执行。*
+```javascript
+// 报错
+function doSomething(value = 070) {
+  'use strict';
+  return value;
+}
+```
+上面代码中，参数value的默认值是八进制数070，但是严格模式下不能用前缀0表示八进制，所以应该报错。但是实际上，JavaScript 引擎会先成功执行value = 070，然后进入函数体内部，发现需要用严格模式执行，这时才会报错。
+
+虽然可以先解析函数体代码，再执行参数代码，但是这样无疑就增加了复杂性。因此，标准索性禁止了这种用法，只要参数使用了默认值、解构赋值、或者扩展运算符，就不能显式指定严格模式。
+
+两种方法可以规避这种限制。<br>
++ 第一种是设定全局性的严格模式，这是合法的。
+```javascript
+'use strict';
+
+function doSomething(a, b = a) {
+  // code
+}
+```
++ 第二种是把函数包在一个无参数的立即执行函数里面。
+```javascript
+const doSomething = (function () {
+  'use strict';
+  return function(value = 42) {
+    return value;
+  };
+}());
+```
 <p id="p4"></p>
 
 ## :sunny:name属性
 <a href="#title">:whale2:回到目录</a><br>
+函数的name属性，返回该函数的函数名。
+```JavaScript
+function foo() {}
+foo.name // "foo"
+```
+这个属性早就被浏览器广泛支持，但是直到 ES6，才将其写入了标准。
+
+需要注意的是，ES6 对这个属性的行为做出了一些修改。如果将一个匿名函数赋值给一个变量，ES5 的name属性，会返回空字符串，而 ES6 的name属性会返回实际的函数名。
+```JavaScript
+var f = function () {};
+
+// ES5
+f.name // ""
+
+// ES6
+f.name // "f"
+```
+上面代码中，变量f等于一个匿名函数，ES5 和 ES6 的name属性返回的值不一样。
+
+如果将一个具名函数赋值给一个变量，则 ES5 和 ES6 的name属性都返回这个具名函数原本的名字。
+```JavaScript
+const bar = function baz() {};
+
+// ES5
+bar.name // "baz"
+
+// ES6
+bar.name // "baz"
+```
+Function构造函数返回的函数实例，name属性的值为anonymous。
+```JavaScript
+(new Function).name // "anonymous"
+```
+bind返回的函数，name属性值会加上bound前缀。
+```JavaScript
+function foo() {};
+foo.bind({}).name // "bound foo"
+
+(function(){}).bind({}).name // "bound "
+```
 <p id="p5"></p>
 
 ## :sunny:箭头函数
 <a href="#title">:whale2:回到目录</a><br>
 #### :mag_right:基本用法
+ES6 允许使用“箭头”（=>）定义函数。类似于lambda表达式：
+```JavaScript
+var add = (a,b) => a+b;
+
+alert(add(4,2));
+alert(add(2,3));
+```
+再看以下例子：
+```JavaScript
+var f = v => v;
+
+// 等同于
+var f = function (v) {
+  return v;
+};
+```
+如果箭头函数不需要参数或需要多个参数，就使用一个圆括号代表参数部分。
+```JavaScript
+var f = () => 5;
+// 等同于
+var f = function () { return 5 };
+
+var sum = (num1, num2) => num1 + num2;
+// 等同于
+var sum = function(num1, num2) {
+  return num1 + num2;
+};
+```
+如果箭头函数的代码块部分多于一条语句，就要使用大括号将它们括起来，并且使用return语句返回。
+```JavaScript
+var sub = (a,b) => {if(a>b){return a-b}else {return b-a}};
+
+alert(sub(4,2));   //2
+alert(sub(2,3));   //1
+```
+由于大括号被解释为代码块，所以如果箭头函数直接返回一个对象，必须在对象外面加上括号，否则会报错。
+```JavaScript
+// 报错
+let getTempItem = id => { id: id, name: "Temp" };
+
+// 不报错
+let getTempItem = id => ({ id: id, name: "Temp" });
+```
+下面是一种特殊情况，虽然可以运行，但会得到错误的结果。
+```JavaScript
+let foo = () => { a: 1 };
+foo() // undefined
+```
+上面代码中，原始意图是返回一个对象{ a: 1 }，但是由于引擎认为大括号是代码块，所以执行了一行语句a: 1。这时，a可以被解释为语句的标签，因此实际执行的语句是1;，然后函数就结束了，没有返回值。
+
+如果箭头函数只有一行语句，且不需要返回值，可以采用下面的写法，就不用写大括号了。
+```javascript
+let fn = () => void doesNotReturn();
+```
+箭头函数可以与变量解构结合使用。
+```javascript
+const full = ({ first, last }) => first + ' ' + last;
+
+// 等同于
+function full(person) {
+  return person.first + ' ' + person.last;
+}
+```
+箭头函数使得表达更加简洁。
+```javascript
+const isEven = n => n % 2 === 0;
+const square = n => n * n;
+```
+上面代码只用了两行，就定义了两个简单的工具函数。如果不用箭头函数，可能就要占用多行，而且还不如现在这样写醒目。
+
+箭头函数的一个用处是简化回调函数。
+```javascript
+// 正常函数写法
+[1,2,3].map(function (x) {
+  return x * x;
+});
+
+// 箭头函数写法
+[1,2,3].map(x => x * x);
+```
+另一个例子是
+```javascript
+// 正常函数写法
+var result = values.sort(function (a, b) {
+  return a - b;
+});
+
+// 箭头函数写法
+var result = values.sort((a, b) => a - b);
+```
+下面是 rest 参数与箭头函数结合的例子。
+```javascript
+const numbers = (...nums) => nums;
+
+numbers(1, 2, 3, 4, 5)
+// [1,2,3,4,5]
+
+const headAndTail = (head, ...tail) => [head, tail];
+
+headAndTail(1, 2, 3, 4, 5)
+// [1,[2,3,4,5]]
+```
 #### :mag_right:注意事项
 #### :mag_right:嵌套的箭头函数
 <p id="p6"></p>
