函数的默认值,箭头函数等

--- a/004-函数的拓展.md
+++ b/004-函数的拓展.md
@@ -624,22 +624,369 @@ headAndTail(1, 2, 3, 4, 5)
 // [1,[2,3,4,5]]
 ```
 #### :mag_right:注意事项
+箭头函数有几个使用注意点。
++ （1）函数体内的this对象，就是定义时所在的对象，而不是使用时所在的对象。
++ （2）不可以当作构造函数，也就是说，不可以使用new命令，否则会抛出一个错误。
++ （3）不可以使用arguments对象，该对象在函数体内不存在。如果要用，可以用 rest 参数代替。
++ （4）不可以使用yield命令，因此箭头函数不能用作 Generator 函数。
+---
+第一点特别注意:**this对象的指向是可变的,但是在箭头函数中他是固定的**
+```JavaScript
+function foo(){
+    setTimeout(()=>{
+        console.log('id:',this.id);
+    },1000);
+}
+
+var id=21;
+
+foo.call({id:42});
+//id: 42
+```
+在上面的例子中,如果是普通函数,执行时this应该指向全局对象window,这时应该输出21,但是,箭头函数导致this总是指向函数定义生效时所在的对象,所以输出42<br>
+**箭头函数可以让setTimeout里面的this绑定定义时所在的作用域,而不是指向运行时所在的作用域**
+```JavaScript
+function Timer(){
+    this.s1=0;
+    this.si-0;
+    //箭头函数
+    setInterval(()=>this.s1++,1000);
+    //普通函数
+    setInterval(function (){
+        this.s2++;
+    },1000);
+}
+
+var timer=new Timer();
+setTimeout(()=>console.log('s1 :',timer.s1),3100);
+setTimeout(()=>console.log('s1 :',timer.s2),3100);
+// s1:3
+// s2:0
+```
+前者的this绑定定义时所在的定义域(即Timer函数),后者的this指向运行时所在的作用域(全局对象),所以,s1更新了3次,s2一次都没有更新
+
+---
+箭头函数可以让this指向固定化,非常有利于封装回调函数,下面这个例子,DOM事件的回调函数封装在一个对象里面
+```JavaScript
+var hander = {
+    id: '123456',
+    init:function(){
+        document.addEventListener('click',event =>this.dosomething(event.type),false)
+    },
+    
+    dosomething:function(type) {
+        console.log('handling'+ type + 'for' + this.id);
+    }
+};
+```
+以上代码init函数使用了箭头函数,这导致箭头函数里面的this总是指向handler对象,否则,回调函数执行时,this.doSomething一行会报错,因为此时this指向document对象
+
+----
+this指向的固定化不是因为箭头函数内部有绑定this的机制,实际原因是箭头函数没有自己的this,导致内部的this就是外层代码块的this,**因为他没有this,所以不能用作构造函数,当然也不可以用call().apply().bind()这些方法**
 #### :mag_right:嵌套的箭头函数
 <p id="p6"></p>
 
-## :sunny:绑定this
+## :sunny:绑定this && 双冒号运算符
 <a href="#title">:whale2:回到目录</a><br>
+箭头函数可以绑定this对象，大大减少了显式绑定this对象的写法（call、apply、bind）。但是，箭头函数并不适用于所有场合，所以现在有一个提案，提出了“函数绑定”（function bind）运算符，用来取代call、apply、bind调用。
+
+函数绑定运算符是并排的两个冒号（::），双冒号左边是一个对象，右边是一个函数。该运算符会自动将左边的对象，作为上下文环境（即this对象），绑定到右边的函数上面。
+```JavaScript
+foo::bar;
+// 等同于
+bar.bind(foo);
+
+foo::bar(...arguments);
+// 等同于
+bar.apply(foo, arguments);
+
+const hasOwnProperty = Object.prototype.hasOwnProperty;
+function hasOwn(obj, key) {
+  return obj::hasOwnProperty(key);
+}
+```
+如果双冒号左边为空，右边是一个对象的方法，则等于将该方法绑定在该对象上面。
+```JavaScript
+var method = obj::obj.foo;
+// 等同于
+var method = ::obj.foo;
+
+let log = ::console.log;
+// 等同于
+var log = console.log.bind(console);
+```
+如果双冒号运算符的运算结果，还是一个对象，就可以采用链式写法。
+```JavaScript
+import { map, takeWhile, forEach } from "iterlib";
+
+getPlayers()
+::map(x => x.character())
+::takeWhile(x => x.strength > 100)
+::forEach(x => console.log(x));
+```
 <p id="p7"></p>
 
 ## :sunny:尾调用优化
 <a href="#title">:whale2:回到目录</a><br>
 #### :mag_right:什么是尾调用
+尾调用（Tail Call）是函数式编程的一个重要概念，本身非常简单，一句话就能说清楚，就是指某个函数的最后一步是调用另一个函数。
+```JavaScript
+function f(x){
+  return g(x);
+}
+```
+上面代码中，函数f的最后一步是调用函数g，这就叫尾调用。
+
+以下三种情况，都不属于尾调用。
+```JavaScript
+// 情况一
+function f(x){
+  let y = g(x);
+  return y;
+}
+
+// 情况二
+function f(x){
+  return g(x) + 1;
+}
+
+// 情况三
+function f(x){
+  g(x);
+}
+```
+上面代码中，情况一是调用函数g之后，还有赋值操作，所以不属于尾调用，即使语义完全一样。情况二也属于调用后还有操作，即使写在一行内。情况三等同于下面的代码。
+```JavaScript
+function f(x){
+  g(x);
+  return undefined;
+}
+```
+尾调用不一定出现在函数尾部，只要是最后一步操作即可。
+```JavaScript
+function f(x) {
+  if (x > 0) {
+    return m(x)
+  }
+  return n(x);
+}
+```
+上面代码中，函数m和n都属于尾调用，因为它们都是函数f的最后一步操作。
 #### :mag_right:尾调用优化
+尾调用之所以与其他的调用不同,就在于其特殊的调用位置.**尾调用优化叫做:*只保留内层函数的调用帧*
 #### :mag_right:尾递归
+函数调用自身，称为递归。如果尾调用自身，就称为尾递归。
+
+递归非常耗费内存，因为需要同时保存成千上百个调用帧，很容易发生“栈溢出”错误（stack overflow）。但对于尾递归来说，由于只存在一个调用帧，所以永远不会发生“栈溢出”错误。
+
+function factorial(n) {
+  if (n === 1) return 1;
+  return n * factorial(n - 1);
+}
+
+factorial(5) // 120
+上面代码是一个阶乘函数，计算n的阶乘，最多需要保存n个调用记录，复杂度 O(n) 。
+
+如果改写成尾递归，只保留一个调用记录，复杂度 O(1) 。
+```JavaScript
+function factorial(n, total) {
+  if (n === 1) return total;
+  return factorial(n - 1, n * total);
+}
+
+factorial(5, 1) // 120
+```
+还有一个比较著名的例子，就是计算 Fibonacci 数列，也能充分说明尾递归优化的重要性。
+
+非尾递归的 Fibonacci 数列实现如下。
+```JavaScript
+function Fibonacci (n) {
+  if ( n <= 1 ) {return 1};
+
+  return Fibonacci(n - 1) + Fibonacci(n - 2);
+}
+
+Fibonacci(10) // 89
+Fibonacci(100) // 堆栈溢出
+Fibonacci(500) // 堆栈溢出
+```
+尾递归优化过的 Fibonacci 数列实现如下。
+```JavaScript
+function Fibonacci2 (n , ac1 = 1 , ac2 = 1) {
+  if( n <= 1 ) {return ac2};
+
+  return Fibonacci2 (n - 1, ac2, ac1 + ac2);
+}
+
+Fibonacci2(100) // 573147844013817200000
+Fibonacci2(1000) // 7.0330367711422765e+208
+Fibonacci2(10000) // Infinity
+```
+由此可见，“尾调用优化”对递归操作意义重大，所以一些函数式编程语言将其写入了语言规格。ES6 亦是如此，第一次明确规定，所有 ECMAScript 的实现，都必须部署“尾调用优化”。这就是说，ES6 中只要使用尾递归，就不会发生栈溢出，相对节省内存。
 #### :mag_right:递归函数的改写
+尾递归的实现，往往需要改写递归函数，确保最后一步只调用自身。做到这一点的方法，就是把所有用到的内部变量改写成函数的参数。比如上面的例子，阶乘函数 factorial 需要用到一个中间变量total，那就把这个中间变量改写成函数的参数。这样做的缺点就是不太直观，第一眼很难看出来，为什么计算5的阶乘，需要传入两个参数5和1？
+
+两个方法可以解决这个问题。方法一是在尾递归函数之外，再提供一个正常形式的函数。
+```JavaScript
+function tailFactorial(n, total) {
+  if (n === 1) return total;
+  return tailFactorial(n - 1, n * total);
+}
+
+function factorial(n) {
+  return tailFactorial(n, 1);
+}
+
+factorial(5) // 120
+```
+上面代码通过一个正常形式的阶乘函数factorial，调用尾递归函数tailFactorial，看起来就正常多了。
+
+函数式编程有一个概念，叫做柯里化（currying），意思是将多参数的函数转换成单参数的形式。这里也可以使用柯里化。
+```JavaScript
+function currying(fn, n) {
+  return function (m) {
+    return fn.call(this, m, n);
+  };
+}
+
+function tailFactorial(n, total) {
+  if (n === 1) return total;
+  return tailFactorial(n - 1, n * total);
+}
+
+const factorial = currying(tailFactorial, 1);
+
+factorial(5) // 120
+```
+上面代码通过柯里化，将尾递归函数tailFactorial变为只接受一个参数的factorial。
+
+第二种方法就简单多了，就是采用 ES6 的函数默认值。
+```JavaScript
+function factorial(n, total = 1) {
+  if (n === 1) return total;
+  return factorial(n - 1, n * total);
+}
+
+factorial(5) // 120
+```
+上面代码中，参数total有默认值1，所以调用时不用提供这个值。
+
+总结一下，递归本质上是一种循环操作。纯粹的函数式编程语言没有循环操作命令，所有的循环都用递归实现，这就是为什么尾递归对这些语言极其重要。对于其他支持“尾调用优化”的语言（比如 Lua，ES6），只需要知道循环可以用递归代替，而一旦使用递归，就最好使用尾递归。
 #### :mag_right:严格模式
+ES6 的尾调用优化只在严格模式下开启，正常模式是无效的。
+
+这是因为在正常模式下，函数内部有两个变量，可以跟踪函数的调用栈。
+```JavaScript
+func.arguments：返回调用时函数的参数。
+
+func.caller：返回调用当前函数的那个函数。
+```
+尾调用优化发生时，函数的调用栈会改写，因此上面两个变量就会失真。严格模式禁用这两个变量，所以尾调用模式仅在严格模式下生效。
+```JavaScript
+function restricted() {
+  'use strict';
+  restricted.caller;    // 报错
+  restricted.arguments; // 报错
+}
+restricted();
+```
 #### :mag_right:尾递归优化的实现
+尾递归优化只在严格模式下生效，那么正常模式下，或者那些不支持该功能的环境中，有没有办法也使用尾递归优化呢？回答是可以的，就是自己实现尾递归优化。
+
+它的原理非常简单。尾递归之所以需要优化，原因是调用栈太多，造成溢出，那么只要减少调用栈，就不会溢出。怎么做可以减少调用栈呢？就是采用“循环”换掉“递归”。
+
+下面是一个正常的递归函数。
+```JavaScript
+function sum(x, y) {
+  if (y > 0) {
+    return sum(x + 1, y - 1);
+  } else {
+    return x;
+  }
+}
+
+sum(1, 100000)
+// Uncaught RangeError: Maximum call stack size exceeded(…)
+```
+上面代码中，sum是一个递归函数，参数x是需要累加的值，参数y控制递归次数。一旦指定sum递归 100000 次，就会报错，提示超出调用栈的最大次数。
+
+蹦床函数（trampoline）可以将递归执行转为循环执行。
+```JavaScript
+function trampoline(f) {
+  while (f && f instanceof Function) {
+    f = f();
+  }
+  return f;
+}
+```
+上面就是蹦床函数的一个实现，它接受一个函数f作为参数。只要f执行后返回一个函数，就继续执行。注意，这里是返回一个函数，然后执行该函数，而不是函数里面调用函数，这样就避免了递归执行，从而就消除了调用栈过大的问题。
+
+然后，要做的就是将原来的递归函数，改写为每一步返回另一个函数。
+```JavaScript
+function sum(x, y) {
+  if (y > 0) {
+    return sum.bind(null, x + 1, y - 1);
+  } else {
+    return x;
+  }
+}
+```
+上面代码中，sum函数的每次执行，都会返回自身的另一个版本。
+
+现在，使用蹦床函数执行sum，就不会发生调用栈溢出。
+```JavaScript
+trampoline(sum(1, 100000))
+// 100001
+```
+蹦床函数并不是真正的尾递归优化，下面的实现才是。
+```JavaScript
+function tco(f) {
+  var value;
+  var active = false;
+  var accumulated = [];
+
+  return function accumulator() {
+    accumulated.push(arguments);
+    if (!active) {
+      active = true;
+      while (accumulated.length) {
+        value = f.apply(this, accumulated.shift());
+      }
+      active = false;
+      return value;
+    }
+  };
+}
+
+var sum = tco(function(x, y) {
+  if (y > 0) {
+    return sum(x + 1, y - 1)
+  }
+  else {
+    return x
+  }
+});
+
+sum(1, 100000)
+// 100001
+```
+上面代码中，tco函数是尾递归优化的实现，它的奥妙就在于状态变量active。默认情况下，这个变量是不激活的。一旦进入尾递归优化的过程，这个变量就激活了。然后，每一轮递归sum返回的都是undefined，所以就避免了递归执行；而accumulated数组存放每一轮sum执行的参数，总是有值的，这就保证了accumulator函数内部的while循环总是会执行。这样就很巧妙地将“递归”改成了“循环”，而后一轮的参数会取代前一轮的参数，保证了调用栈只有一层。
 <p id="p8"></p>
 
 ## :sunny:函数参数的尾逗号
 <a href="#title">:whale2:回到目录</a><br>
+此前,函数定义和调用时都不允许最后一个参数有尾逗号
+```JavaScript
+function clownsEverywhere(
+    param1,
+    param2
+)
+```
+在param2之后是不允许有括号的,这里要添加第三个参数的时候.比较麻烦
+<br>因此新提案允许定义和调用时尾部有一个逗号
+```JavaScript
+function clownsEverywhere(
+    param1,
+    param2,
+)
+```
