--- a/007-数组的拓展.md
+++ b/007-数组的拓展.md
@@ -429,29 +429,314 @@ function ArrayOf(){
 ```
 ## :sunny:数组实例的copyWithin()
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+数组实例的copyWithin方法，在当前数组内部，将指定位置的成员复制到其他位置（会覆盖原有成员），然后返回当前数组。也就是说，使用这个方法，会修改当前数组。
+```JavaScript
+Array.prototype.copyWithin(target, start = 0, end = this.length)
+```
+它接受三个参数。<br>
++ target（必需）：从该位置开始替换数据。如果为负值，表示倒数。
++ start（可选）：从该位置开始读取数据，默认为 0。如果为负值，表示倒数。
++ end（可选）：到该位置前停止读取数据，默认等于数组长度。如果为负值，表示倒数。
+
+这三个参数都应该是数值，如果不是，会自动转为数值。
+```JavaScript
+[1, 2, 3, 4, 5].copyWithin(0, 3)
+// [4, 5, 3, 4, 5]
+```
+上面代码表示将从 3 号位直到数组结束的成员（4 和 5），复制到从 0 号位开始的位置，结果覆盖了原来的 1 和 2。
+
+下面是更多例子。
+```JavaScript
+// 将3号位复制到0号位
+[1, 2, 3, 4, 5].copyWithin(0, 3, 4)
+// [4, 2, 3, 4, 5]
+
+// -2相当于3号位，-1相当于4号位
+[1, 2, 3, 4, 5].copyWithin(0, -2, -1)
+// [4, 2, 3, 4, 5]
+
+// 将3号位复制到0号位
+[].copyWithin.call({length: 5, 3: 1}, 0, 3)
+// {0: 1, 3: 1, length: 5}
+
+// 将2号位到数组结束，复制到0号位
+let i32a = new Int32Array([1, 2, 3, 4, 5]);
+i32a.copyWithin(0, 2);
+// Int32Array [3, 4, 5, 4, 5]
+
+// 对于没有部署 TypedArray 的 copyWithin 方法的平台
+// 需要采用下面的写法
+[].copyWithin.call(new Int32Array([1, 2, 3, 4, 5]), 0, 3, 4);
+// Int32Array [4, 2, 3, 4, 5]
+```
 <p id="p5"></p>
 
 ## :sunny:数组实例的find()和findIndex()
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+数组实例的find方法，用于找出第一个符合条件的数组成员。它的参数是一个回调函数，所有数组成员依次执行该回调函数，直到找出第一个返回值为true的成员，然后返回该成员。如果没有符合条件的成员，则返回undefined。
+```JavaScript
+let a = [7,56,27,35,36,27];
+
+let result = a.find(function(value,index,arr){
+    return value%5==0;
+})
+
+alert(result);    //35
+```
+上面代码中，find方法的回调函数可以接受三个参数，依次为当前的值、当前的位置和原数组。类似于数组的遍历方法，可以对每一项运行该函数，如果没有返回值来判定筛选值，就像数组的遍历方法一样使用：
+```JavaScript
+let a = [7,56,27,35,36,27];
+
+a.find(function(value,index,arr){
+    alert("数组第"+index+"位"+"的值为:"+arr[index]);
+});
+```
+像上面就可以遍历数组。数组实例的findIndex方法的用法与find方法非常类似，返回第一个符合条件的数组成员的位置，如果所有成员都不符合条件，则返回-1。
+```JavaScript
+[1, 5, 10, 15].findIndex(function(value, index, arr) {
+  return value > 9;
+}) // 2
+```
+两种方法均返回第一个符合项，find返回的是满足的值，findIndex返回的是满足的数组索引项。find没有找到返回undefined，findIndex返回的是-1.
+
+这两个方法都可以接受第二个参数，用来绑定回调函数的this对象。即第二个参数是用来给第一个参数函数中this对象传值，如下：
+```JavaScript
+var avg = 2;            
+let a = [7,56,27,35,76,27];
+
+function f(n){
+    return n > this.avg
+}
+
+let p1 = {
+    'avg' : 50,
+    'length' : 2
+};
+let p2 = {
+    'avg' : 63,
+    'length' : 3    
+}
+
+alert(a.find(f,p1));             //56
+alert(a.find(f,p2));             //76
+alert(a.find(f,window));         //7
+```
+上面可以看出this调用的对象不同。第一个是p1对象，第二个是p2对象，第三个是全局对象window。所以使用第二个参数可以用来绑定this对象
+
+另外，这两个方法都可以发现NaN，弥补了数组的indexOf方法的不足。
+```JavaScript
+[NaN].indexOf(NaN)
+// -1
+
+[NaN].findIndex(y => Object.is(NaN, y))
+// 0
+```
+上面代码中，indexOf方法无法识别数组的NaN成员，但是findIndex方法可以借助Object.is方法做到。
 <p id="p6"></p>
 
 ## :sunny:数组实例的fill()
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+fill方法使用给定值，填充一个数组。
+```JavaScript
+['a', 'b', 'c'].fill(7)
+// [7, 7, 7]
+
+new Array(3).fill(7)
+// [7, 7, 7]
+```
+上面代码表明，fill方法用于空数组的初始化非常方便。数组中已有的元素，会被全部抹去。
+
+fill方法还可以接受第二个和第三个参数，用于指定填充的起始位置和结束位置,这样就可以很准确的填充，如下：
+```JavaScript
+let a = [1,4,3];
+
+a = a.fill(2,1,2);
+
+alert(a); //1,2,3
+```
+上面代码表示，fill方法从 1 号位开始，向原数组填充 2，到 2 号位之前结束。值得注意是该方法不能填充不同值，即要填充的数值只能为一种，不能分别为不同的数值，所以只能填充一样的数值。
+
+注意，如果填充的类型为对象，那么被赋值的是同一个内存地址的对象，而不是深拷贝对象。
+```JavaScript
+let arr = new Array(3).fill({name: "Mike"});
+arr[0].name = "Ben";
+arr
+// [{name: "Ben"}, {name: "Ben"}, {name: "Ben"}]
+
+let arr = new Array(3).fill([]);
+arr[0].push(5);
+arr
+// [[5], [5], [5]]
+```
 <p id="p7"></p>
 
 ## :sunny:数组实例的entires(),keys(),values()
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+ES6 提供三个新的方法——entries()，keys()和values()——用于遍历数组。它们都返回一个遍历器对象（详见《Iterator》一章），可以用for...of循环进行遍历，唯一的区别是keys()是对键名的遍历,也就是数值的索引位、values()是对键值的遍历，也就是数组的值，entries()是对键值对的遍历，即前面的结合，返回键值对。
+```JavaScript
+let a = ['a','b','c','d'];
+
+for(let item of a.entries()){
+    alert(item);  
+    //0 a
+    //1 b
+    //2 c
+    //3 d
+}
+
+
+for(let item of a.keys()){
+    alert(item);
+    //0,1,2,3
+}
+
+for(let item of a.values()){
+    alert(item);
+    //a,b,c,d
+}
+```
+如果想对键值对进行分别处理可以添加数组类型遍历项：
+```JavaScript
+let a = ['a','b','c','d'];
+
+for (let [index, elem] of a.entries()) {
+    alert("第"+index+"位的值为:"+elem)
+}
+```
+如果不使用for...of循环，可以手动调用遍历器对象的next方法，进行遍历。
+```JavaScript
+let letter = ['a', 'b', 'c'];
+let entries = letter.entries();
+console.log(entries.next().value); // [0, 'a']
+console.log(entries.next().value); // [1, 'b']
+console.log(entries.next().value); // [2, 'c']
+```
 <p id="p8"></p>
 
 ## :sunny:数组实例的include()
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+Array.prototype.includes方法返回一个布尔值，表示某个数组是否包含给定的值，与字符串的includes方法类似。ES2016 引入了该方法。
+```JavaScript
+[1, 2, 3].includes(2)     // true
+[1, 2, 3].includes(4)     // false
+[1, 2, NaN].includes(NaN) // true
+```
+该方法的第二个参数表示搜索的起始位置，默认为0。如果第二个参数为负数，则表示倒数的位置，如果这时它大于数组长度（比如第二个参数为-4，但数组长度为3），则会重置为从0开始。
+```JavaScript
+[1, 2, 3].includes(3, 3);  // false
+[1, 2, 3].includes(3, -1); // true
+```
+没有该方法之前，我们通常使用数组的indexOf方法，检查是否包含某个值。
+```JavaScript
+if (arr.indexOf(el) !== -1) {
+  // ...
+}
+```
+indexOf方法有两个缺点，一是不够语义化，它的含义是找到参数值的第一个出现位置，所以要去比较是否不等于-1，表达起来不够直观。二是，它内部使用严格相等运算符（===）进行判断，这会导致对NaN的误判。
+```JavaScript
+[NaN].indexOf(NaN)
+// -1
+```
+includes使用的是不一样的判断算法，就没有这个问题。
+```JavaScript
+[NaN].includes(NaN)
+// true
+```
 <p id="p9"></p>
 
 ## :sunny:数组的空位
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+数组的空位指，数组的某一个位置没有任何值。比如，Array构造函数返回的数组都是空位。
+```JavaScript
+Array(3) // [, , ,]
+```
+上面代码中，Array(3)返回一个具有 3 个空位的数组。
+
+注意，空位不是undefined，一个位置的值等于undefined，依然是有值的。空位是没有任何值，in运算符可以说明这一点。
+```JavaScript
+0 in [undefined, undefined, undefined] // true
+0 in [, , ,] // false
+```
+上面代码说明，第一个数组的 0 号位置是有值的，第二个数组的 0 号位置没有值。
+
+ES5 对空位的处理，已经很不一致了，大多数情况下会忽略空位。
+
+forEach(), filter(), reduce(), every() 和some()都会跳过空位。
+
+map()会跳过空位，但会保留这个值
+
+join()和toString()会将空位视为undefined，而undefined和null会被处理成空字符串。
+```JavaScript
+// forEach方法
+[,'a'].forEach((x,i) => console.log(i)); // 1
+
+// filter方法
+['a',,'b'].filter(x => true) // ['a','b']
+
+// every方法
+[,'a'].every(x => x==='a') // true
+
+// reduce方法
+[1,,2].reduce((x,y) => x+y) // 3
+
+// some方法
+[,'a'].some(x => x !== 'a') // false
+
+// map方法
+[,'a'].map(x => 1) // [,1]
+
+// join方法
+[,'a',undefined,null].join('#') // "#a##"
+
+// toString方法
+[,'a',undefined,null].toString() // ",a,,"
+```
+ES6 则是明确将空位转为undefined。
+
+Array.from方法会将数组的空位，转为undefined，也就是说，这个方法不会忽略空位。
+```JavaScript
+Array.from(['a',,'b'])
+// [ "a", undefined, "b" ]
+```
+扩展运算符（...）也会将空位转为undefined。
+```JavaScript
+[...['a',,'b']]
+// [ "a", undefined, "b" ]
+```
+copyWithin()会连空位一起拷贝。
+```JavaScript
+[,'a','b',,].copyWithin(2,0) // [,"a",,"a"]
+```
+fill()会将空位视为正常的数组位置。
+```JavaScript
+new Array(3).fill('a') // ["a","a","a"]
+```
+for...of循环也会遍历空位。
+```JavaScript
+let arr = [, ,];
+for (let i of arr) {
+  console.log(1);
+}
+// 1
+// 1
+```
+上面代码中，数组arr有两个空位，for...of并没有忽略它们。如果改成map方法遍历，空位是会跳过的。
+
+entries()、keys()、values()、find()和findIndex()会将空位处理成undefined。
+```JavaScript
+// entries()
+[...[,'a'].entries()] // [[0,undefined], [1,"a"]]
+
+// keys()
+[...[,'a'].keys()] // [0,1]
+
+// values()
+[...[,'a'].values()] // [undefined,"a"]
+
+// find()
+[,'a'].find(x => true) // undefined
+
+// findIndex()
+[,'a'].findIndex(x => true) // 0
+```
+由于空位的处理规则非常不统一，所以建议避免出现空位。
