--- a/007-数组的拓展.md
+++ b/007-数组的拓展.md
@@ -10,6 +10,7 @@
 <a href="#p7">:snowflake:数组实例的entires(),keys(),values()</a><br>
 <a href="#p8">:snowflake:数组实例的include()</a><br>
 <a href="#p9">:snowflake:数组的空位</a><br>
+<a href="#p10">:snowflake:补充</a><br>
 <p id="p1"></p>
 
 ## :sunny:拓展运算符
@@ -740,3 +741,55 @@ entries()、keys()、values()、find()和findIndex()会将空位处理成undefin
 [,'a'].findIndex(x => true) // 0
 ```
 由于空位的处理规则非常不统一，所以建议避免出现空位。
+<p id="p10"></p>
+
+## :sunny:补充:flat()，flatMap()方法
+<a href="#title">:whale2:回到目录</a><br>
+数组的成员有时还是数组，Array.prototype.flat()用于将嵌套的数组“拉平”，变成一维的数组。该方法返回一个新数组，对原数据没有影响。
+```JavaScript
+[1, 2, [3, 4]].flat()
+// [1, 2, 3, 4]
+```
+上面代码中，原数组的成员里面有一个数组，flat()方法将子数组的成员取出来，添加在原来的位置。
+
+flat()默认只会“拉平”一层，如果想要“拉平”多层的嵌套数组，可以将flat()方法的参数写成一个整数，表示想要拉平的层数，默认为1。
+```JavaScript
+[1, 2, [3, [4, 5]]].flat()
+// [1, 2, 3, [4, 5]]
+
+[1, 2, [3, [4, 5]]].flat(2)
+// [1, 2, 3, 4, 5]
+```
+上面代码中，flat()的参数为2，表示要“拉平”两层的嵌套数组。
+
+如果不管有多少层嵌套，都要转成一维数组，可以用Infinity关键字作为参数。
+```JavaScript
+[1, [2, [3]]].flat(Infinity)
+// [1, 2, 3]
+```
+如果原数组有空位，flat()方法会跳过空位。
+```JavaScript
+[1, 2, , 4, 5].flat()
+// [1, 2, 4, 5]
+```
+flatMap()方法对原数组的每个成员执行一个函数（相当于执行Array.prototype.map()），然后对返回值组成的数组执行flat()方法。该方法返回一个新数组，不改变原数组。
+```JavaScript
+// 相当于 [[2, 4], [3, 6], [4, 8]].flat()
+[2, 3, 4].flatMap((x) => [x, x * 2])
+// [2, 4, 3, 6, 4, 8]
+```
+flatMap()只能展开一层数组。
+```JavaScript
+// 相当于 [[[2]], [[4]], [[6]], [[8]]].flat()
+[1, 2, 3, 4].flatMap(x => [[x * 2]])
+// [[2], [4], [6], [8]]
+```
+上面代码中，遍历函数返回的是一个双层的数组，但是默认只能展开一层，因此flatMap()返回的还是一个嵌套数组。
+
+flatMap()方法的参数是一个遍历函数，该函数可以接受三个参数，分别是当前数组成员、当前数组成员的位置（从零开始）、原数组。
+```JavaScript
+arr.flatMap(function callback(currentValue[, index[, array]]) {
+  // ...
+}[, thisArg])
+```
+flatMap()方法还可以有第二个参数，用来绑定遍历函数里面的this。
