--- a/008-对象的拓展.md
+++ b/008-对象的拓展.md
@@ -284,7 +284,64 @@ Object.defineProperty(Object,'is',{
 
 ## :sunny:Object.assign()
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+#### :mag_right:基本用法
+Object.assign方法用于将源对象(source)的所有**可枚举属性**复制到目标对象(target)
+```JavaScript
+var target = {a:1};
+
+var source1={b:2};
+var source2={c:3};
+
+Object.assign(target,source1,source2);
+target //{a:1,b:2,c:3}
+```
+Object.assign方法的第一个参数是目标对象,后面的参数都是源对象
+
+---
+**注意**: 如果目标对象与源对象有同名属性,或多个源对象有同名属性,则后面的属性会覆盖前面的属性
+
+---
+如果只有一个参数,Object.assign会直接返回该参数
+```JavaScript
+var obj={a:1};
+Object.assign(obj)===obj  //true
+```
+如果该参数不是对象,则会先转成对象,然后返回
+```JavaScript
+typeof Object.assign(2)  //"object"
+```
+由于undefined和null无法转成对象,所以如果他们作为参数,就会报错
+```JavaScript
+Object.assign(undefined)  //报错
+Object.assign(null)  //报错
+```
+如果非对象参数出现在源对象的位置(即非首参数),那末这些参数会转成对象,如果无法转成对象则跳过,所以undefined和null不会报错
+```JavaScript
+let obj = {a:1};
+Object.assign(obj,undefined)===obj  //true
+Object.assign(obj,null)===obj   //true
+```
+其他类型的值不在首参数也不会报错,但是,**字符串会以数组形式复制到目标对象(这是因为只有字符串的包装对象会产生可枚举对象)**,其他值都不会产生效果
+```JavaScript
+var v1 ='abc';
+var v2 = true;
+var v3 = 10;
+var obj=Objecr.assign({},v1,v2,v3);
+console.log(obj);  //{"0":"a","1":"b","2":"c"
+```
+Object.assign复制的属性是有限制的,只复制源对象的自身属性(不复制继承属性),也不复制不可枚举属性(enumerable: false)
+<br>
+属性名为Symbol值的属性也会被Object.assign复制
+Object.assign({a:'b'},{[Symbol('c')]: 'd'})  //{a: 'b',Symble(c): 'd'}
+#### :mag_right:注意点
+Object.assign方法实行的是浅复制,而不是深复制,所以,**如果源对象某个属性值是对象,那么目标对象复制得到的是这个对象的引用(这个对象的任何变化都会反映到目标对象上)**
+```JavaScript
+var obj1={a:{b:1}};
+var obj2=Object.assign({},obj1);
+obj1.a.b=2;
+obj2.a.b  //2
+```
+#### :mag_right:常见用途
 <p id="p6"></p>
 
 ## :sunny:属性的可枚举性
