--- a/008-对象的拓展.md
+++ b/008-对象的拓展.md
@@ -341,7 +341,67 @@ var obj2=Object.assign({},obj1);
 obj1.a.b=2;
 obj2.a.b  //2
 ```
+对于嵌套的对象,一旦遇到同名属性,Object.assign的处理方法是替换而不是添加
+```JavaScript
+var target ={a:{b:'c',d:'e'}}
+var source={a:{b:'hello'}}
+Object.assign(target,source)
+//{a:{b:hello}}
+```
+上面的代码中,target对象的a属性被source对象的a属性整个替换掉了.这通常不是开发者想要的,需要特别小心.
+<br>
+**注意**: Object.assign可以用来处理数组,但是会把数组视为对象处理
+```javascript
+Object.assign([1,2,3],[4,5]);
+//[4,5,3]
+```
 #### :mag_right:常见用途
++ 为对象添加属性
+```JavaScript
+class Point{
+    constructor(x,y) {
+        Object.assign(this,{x,y});
+    }
+} 
+```
++ 为对象添加方法
+```JavaScript
+Object.assign(SomeClass.prototype,{
+    someMEthod(arg1,arg2){
+        
+    }
+})
+```
++ 克隆对象
+```JavaScript
+function clone(origin){
+    return Object.assign({},origin)
+}
+```
+采用这种方法只能克隆原始对象自身的值,不能克隆他继承的值.如果想要继续保存基层链,可以采用下面的代码
+```JavaScript
+function clone(origin){
+    let originProto=Object.getPrototypeOf(origin);
+    return Object.assign(Object.create(originProto),origin);
+}
+```
++ 合并多个对象
+```JavaScript
+const merge = (target,...sources)=>Object.assign(target,...sources);
+```
++ 为属性修改默认值
+```JavaScript
+const DEFAULTS={
+    logLevel: 0,
+    outputFormat: 'html'
+};
+
+function processContent(options){
+    options=Object.assign({},DEFAULTS,options);
+    console.log(options);
+}
+```
+**注意**: 由于存在深复制的问题,DEFAULTS对象和options对象的所有属性的值只能是简单类型,而不能指向另一个对象,否则导致DEFAULTS对象的该属性不起作用
 <p id="p6"></p>
 
 ## :sunny:属性的可枚举性
