--- a/008-对象的拓展.md
+++ b/008-对象的拓展.md
@@ -406,12 +406,94 @@ function processContent(options){
 
 ## :sunny:属性的可枚举性
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+对象的每一个属性都具有一个描述对象(Descriptor),用于控制该属性的行为,OBject.getOwnPropertyDescriptor方法可以获取该属性的描述对象
+```JavaScript
+let obj ={foo:123};
+Object.getOwnPropertyDescriptor(obj,'foo')
+//{
+//    value: 123,
+//    writable: true,
+//    enumerable: true,
+//    configurable: true
+//}
+```
+ES5有3个操作会忽略enumerable(可枚举性)为false的属性<br>
++ for..in循环:只遍历对象自身和继承的可枚举属性
++ Object.keys()返回自身对象的所有可枚举属性的键名
++ JSON.stringify():只串行化对象自身的可枚举属性
+<br>
+ES6新增了Object.assign(),会忽略enumerable为false的属性,只复制对象自身可枚举属性
+
 <p id="p7"></p>
 
 ## :sunny:属性的遍历
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+ES6 一共有 5 种方法可以遍历对象的属性。
+
+**（1）for...in **
+
+for...in循环遍历对象自身的和继承的可枚举属性（不含 Symbol 属性）。如下，遍历对象属性与值：
+```JavaScript
+var student = {
+    name : 'guixu',
+    id : '2018110210',
+    age : 18,
+    sex : true
+};
+
+for(item in student){
+   alert(item + ":" + student[item]);
+}
+```
+**（2）Object.keys(obj) **
+
+Object.keys返回一个数组，包括对象自身的（不含继承的）所有可枚举属性（不含 Symbol 属性）的键名。如下返回属性数组：
+```JavaScript
+var student = {
+    name : 'guixu',
+    id : '2018110210',
+    age : 18,
+    sex : true
+};
+
+
+let infor1 = Object.keys(student);
+
+alert(infor1);        //name,id,age,sex
+
+for(item in infor1){
+   let pro = infor1[item] ;
+   alert(pro+" : "+student[pro]);
+}
+```
+（3）Object.getOwnPropertyNames(obj)
+
+Object.getOwnPropertyNames返回一个数组，包含对象自身的所有属性（不含 Symbol 属性，但是包括不可枚举属性）的键名。和上面一致：
+```JavaScript
+var student = {
+    name : 'guixu',
+    id : '2018110210',
+    age : 18,
+    sex : true
+};
+
+
+let infor1 = Object.getOwnPropertyNames(student);
+
+alert(infor1);
+
+for(item in infor1){
+   let pro = infor1[item] ;
+   alert(pro+" : "+student[pro]);
+}
+```
+（4）Object.getOwnPropertySymbols(obj)
+
+Object.getOwnPropertySymbols返回一个数组，包含对象自身的所有 Symbol 属性的键名。与上面一致，修改属性方法即可。
+
+（5）Reflect.ownKeys(obj)
+
+Reflect.ownKeys返回一个数组，包含对象自身的所有键名，不管键名是 Symbol 或字符串，也不管是否可枚举。与上面一致，修改属性方法即可。
 <p id="p8"></p>
 
 ## :sunny:__proto__,Object.setPrototypeOf(),Object.getPrototypeOf()
