--- a/008-对象的拓展.md
+++ b/008-对象的拓展.md
@@ -714,9 +714,22 @@ let runtimeError = {
 
 ## :sunny:Object.getOwnPrototypeDescriptors()
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+返回指定对象所有自身属性(非继承属性)的描述对象
 <p id="p12"></p>
 
 ## :sunny:Null运算符
 <a href="#title">:whale2:回到目录</a><br>
-#### :mag_right:
+如果读取对象内部的某个属性,往往需要判断该对象是否存在,比如读取message.body.user.firstName
+```javascript
+const firstname=(message && message.body && message.body.user && message.body.firstName) || 'default'
+```
+这种方法太过麻烦,因此现在引入了 **"Null传到运算符"**,简化如下:
+```JavaScript
+const firstName = message?.body?.user?.firstName  || ''default
+```
+上面的代码有3个?.运算符,只要其中一个返回null或undefined,就不在继续运算,而是返回undefined
+<br>**Null运算符有4中用法**<br>
++ obj?.prop: 读取对象属性
++ obj?.[expr]: 同上
++ func?.(...args):函数或对象方法的调用
++ new C?.(...args): 构造函数的调用
